<resources>
    <string name="app_name">Plonkd</string>
    <string name="title_activity_main">Plunkd</string>

    <string name="location">Press "Get Location" or wait for system to update location.</string>
    <string name="getLocationButtonText">Get Location</string>
    <string name="saveLocationButtonText">Save Location</string>
    <string name="currentLocationTittle">Current Location</string>
    <string name="savedLocationsTitle">Saved Locations</string>
    <string name="title_activity_locations_list">LocationsListActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
</resources>
